--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@
   flex-flow: column;
 }
 
+body {
+  background-color: #e1e1b5;
+}
+
 .App {
   display: flex;
   align-items: center;
@@ -24,7 +28,7 @@
 .battle-toolbar {
   display: flex;
   justify-content: space-evenly;
-  border: 2px solid black;
+  border: 2px solid #5f130d;
   height: 40px;
   width: 100%;
   padding: 5px;
@@ -42,10 +46,12 @@
   align-items: center;
   flex-flow: column;
   font-weight: bold;
+  color: #5f130d;
 }
 
 .battle-toolbar--stat-value {
   font-weight: normal;
+  color: black;
 }
 
 .create-creature-form {
@@ -57,8 +63,11 @@
   justify-content: center;
 }
 
-.create-creature-form--input__numeric {
-  width: 33%;
+.create-creature-form--input {
+  border: 2px solid #5f130d;
+  margin: 10px 0 10px 0;
+  padding: 10px;
+  width: 100%;
 }
 
 .creature-list {
@@ -67,13 +76,14 @@
 }
 
 .creature-wrapper {
-  border: 2px solid black;
+  border: 2px solid #5f130d;
   margin: 10px 0 10px 0;
-  padding: 10px
+  padding: 10px;
+  background-color: #daebbe;
 }
 
 .creature-wrapper__active {
-  border: 2px solid red;
+  border: 2px solid #b12000;
 }
 
 .expanded-creature {
@@ -87,6 +97,7 @@
 .expanded-creature--name {
   font-weight: bold;
   margin-bottom: 20px;
+  color: #5f130d;
 }
 
 .expanded-creature-stat {
@@ -95,4 +106,5 @@
 
 .collapsed-creature--name {
   font-weight: bold;
+  color: #5f130d
 }
