--- a/src/App.css
+++ b/src/App.css
@@ -63,18 +63,23 @@ body {
 }
 
 .creature-toolbar > * {
-  margin-right: 30px;
+  padding-right: 60px;
 }
 
 .creature-toolbar--button {
   border: 2px solid #5f130d;
   padding: 10px;
+  margin-right: 35px;
+}
+
+.creature-toolbar--form {
+  width: 10%;
 }
 
 .creature-toolbar--input {
-  width: 33%;
   border: 2px solid #5f130d;
   padding: 10px;
+  width: 100%;
 }
 
 /* Create creature form */
@@ -110,7 +115,7 @@ body {
 }
 
 .creature-wrapper__active {
-  border: 2px solid #b12000;
+  border: 4px solid #b12000;
 }
 
 .creature-wrapper__dead {
