--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@ body {
   border: 2px solid #5f130d;
   padding: 10px;
   width: 100%;
+  background-color: white;
 }
 
 /* Create creature form */
