--- a/src/App.css
+++ b/src/App.css
@@ -54,29 +54,28 @@ body {
 /* Creature toolbar */
 
 .creature-toolbar {
-  display: flex;
-}
-
-.creature-toolbar > * {
-  padding-right: 60px;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-auto-rows: minmax(41px, auto);
+  grid-gap: 10px;
+  width: 100%;
+  grid-auto-rows: minmax(14px, auto);
 }
 
 .creature-toolbar--button {
   border: 2px solid #5f130d;
   padding: 10px;
-  margin-right: 35px;
   cursor: pointer;
-}
-
-.creature-toolbar--form {
-  width: 10%;
 }
 
 .creature-toolbar--input {
   border: 2px solid #5f130d;
   padding: 10px;
-  width: 100%;
   background-color: white;
+}
+
+.creature-toolbar--input__number {
+  width: 80%;
 }
 
 .creature-toolbar--dropdown {
@@ -181,6 +180,10 @@ body {
 .collapsed-creature--name__dead {
   text-decoration: line-through wavy;
   text-decoration-color: black;
+}
+
+.collapsed-creature--conditions {
+  text-transform: capitalize;
 }
 
 /* Creature note list */
