--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,9 @@ body {
 }
 
 .battle-toolbar--button {
-  height: 50%;
-  margin-top: 10px;
   cursor: pointer;
+  border: 2px solid #5f130d;
+  padding: 10px;
 }
 
 .battle-toolbar--stat {
