--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,10 @@ button {
   width: 100%;
 }
 
+.create-creature-form--input__error {
+  border: 4px solid red;
+}
+
 /* Creatures */
 
 .creature-list {
