Make start and reset buttons disabled if no creatures have been added

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,12 @@ button {
   text-transform: capitalize;
 }
 
+.battle-toolbar--button__disabled {
+  background-color: transparent;
+  cursor: auto;
+  border: 2px dashed #5f130d;
+}
+
 /* Creature toolbar */
 
 .creature-toolbar {
