--- a/src/App.css
+++ b/src/App.css
@@ -69,27 +69,26 @@ button {
 /* Creature toolbar */
 
 .creature-toolbar {
-  display: grid;
-  grid-template-columns: repeat(5, auto);
   grid-gap: 10px;
+  display: grid;
 }
 
-@media only screen and (max-width: 768px) {
-  .creature-toolbar {
-    grid-template-columns: repeat(2, auto);
-  }
+.creature-toolbar--4-cols {
+  grid-template-columns: repeat(4, auto);
 }
 
-@media only screen and (max-width: 600px) {
-  .creature-toolbar {
-    grid-template-columns: repeat(1, auto);
-  }
+.creature-toolbar--5-cols {
+  grid-template-columns: repeat(5, auto);
 }
 
 .creature-toolbar--input {
   border: 2px solid #5f130d;
   padding: 10px;
   background-color: white;
+  box-sizing: border-box;
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 
 .creature-toolbar--input__disabled {
