--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,11 @@ button {
   grid-template-columns: repeat(5, auto);
 }
 
+.creature-toolbar--form {
+  width: 100%;
+  height: 100%;
+}
+
 .creature-toolbar--input {
   border: 2px solid #5f130d;
   padding: 10px;
