--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ button {
 }
 
 /* Remove second-most unimportant battle bar info for screens smaller than 600px */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) and (orientation: portrait) {
   .battle-toolbar--stat__extra1 {
     display: none;
   }
