--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ button {
 
 .creature-toolbar--button {
   grid-column: span 2;
-  padding: 5px;
+  padding: 1px;
 }
 
 .creature-toolbar--input__disabled {
@@ -373,17 +373,18 @@ button {
   }
 }
 
+.creature-note-list--item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .creature-note-list--label {
   font-size: 22px;
   color: #822000;
   border-bottom: 1px solid black;
   width: 50%;
   margin-bottom: 20px;
-}
-
-.creature-note-list--title {
-  display: flex;
-  align-items: center;
 }
 
 .creature-note-list--note {
@@ -404,9 +405,10 @@ button {
 }
 
 .creature-note-list--button {
-  margin-left: 10px;
-  text-decoration: none;
-  padding: 8px;
+  margin-right: 15%;
+  margin-left: 5px;
+  padding: 4px;
+  display: flex;
 }
 
 .creature-note-list--timer {
@@ -416,7 +418,8 @@ button {
 }
 
 .expand-creature-button {
-  padding: 2px;
+  padding: 4px;
+  display: flex;
 }
 
 /* Health points */
